# ABOT

./: .gitignore  .gitignore.save  README.md  main.py  pyproject.toml
connectors/: binance.py  coindcx.py  csx.py  kucoin.py
connectors/cspro/: cspro.py  cspro_auth.py
connectors/kucoin/: kucoin.py  kucoin_auth.py
models/: binance_response.py  coindcx_response.py  common_response.py  cspro_response.py  kc_response.py
service/: fetcher.py  processor.py
utils/: logger.py
