[project]
name = "abot"
version = "v0"
description = "arbitrage bot for all indian markets"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography (==40.0.2)",
    "requests (>=2.27.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
