[tool.poetry]
name = "abot"
version = "0.1.0"
description = ""
authors = ["Ajay <negia2582@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
dotenv = "^0.9.9"
pydantic = "^2.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
